[package]
name = "oxidoist-api"
version = "0.1.0"
authors = ["Christopher Leggett <chris@leggett.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.0"
